1998-03-18  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Arguments.m: Include unistd.h and stdlib.h.
	Define swarm_version to be equal to VERSION.
	Define global Arguments object.
	([Arguments -getExecutablePath]): New method.
	([Arguments +createArgc:Argv:]): Use find_executable to
	get value for program_invocation_name instead of using
	theArgv[0] directly.
	(dropDirectory, findDirectory, findSwarm): New functions.
	([Arguments -getSwarmHome]): Use SWARMHOME or findSwarm
	to find source tree.

	* Arguments.h: Declare a global variable for an Argument
	object (previously in simtools).
	(Arguments): swarmHome new variable.
	Declare getExecutablePath and getSwarmHome methods.

	* objectbase.h: Declare swarm_version.

1998-03-13  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile (version.h): New rule to create version.h.  
	Arguments.o depends on it.

	* Arguments.m: Include computed file version.h (from
	Makefile.conf's VERSION).
	Use VERSION to define argp_program_version.

1998-03-09  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Arguments.m:  Include misc.h for strdup.
	(getApplicationValue): Truncate return at `.'.

1998-03-02  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* objectbase.h (MessageProbe): Declare doubleDynamicCallOn:.

1998-02-26  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* objectbase.h (val_t): Add _uchar.

	* MessageProbe.m ([MessageProbe -dynamicCallOn:]): Add a version
	for libffi.  Only use avcall if USE_AVCALL is defined.  The
	internal functions for both versions of push_argument now take a
	pointer because libffi uses pointers instead of values for
	arguments.
	([MessageProbe -doubleDynamicCallOn:]): Add int,uchar->double coercion
	capability (motivated by Bank).
	([MessageProbe -dynamicCallOn:]): Add unsigned char support
	to both versions.

1998-02-23  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* swarm_rts_routines.[hm] (swarm_method_get_number_of_arguments):
	Remove.  Remove my_objc prefixes.  Change skip_argspec to