@@ -1,3 +1,10 @@
+1998-03-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* MessageProbe.m ([MessageProbe -setArg:ToString:], [MessageProbe
+	-dynamicCallOn:]): Add _C_CHARPTR support.
+
+	* objectbase.h: Add const char * slot to val_t union.
+
 1998-03-18  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* Arguments.m: Include unistd.h and stdlib.h.
